<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.ItemAddActivity">

    <TextView
        android:id="@+id/addItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addItemMsg"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nameText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/amountText"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/design_default_color_background"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputQty"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/qtyText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/descriptionText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputQty"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputLowThreshhold"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Low Stock Warning Level"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/itemCreate"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="createItem"
        android:text="@string/itemCreateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLowThreshhold" />

</androidx.constraintlayout.widget.ConstraintLayout>